# AI_playwright_driven_automation_POC

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements.txt  run_ai_tests.py
Utilities/: DBManager.py  utils.py
ai_core/: ai_agent.py  ai_browser.py  ai_logger.py  ai_model.py  ai_runner.py  ai_self_heal.py  ai_video_trace.py
ai_reports/: automation_results.db  self_heal_cache.json
ai_reports/logs/: self_heal_log.txt
ai_tests/: conftest.py  test_search_product.py
ai_tests/src/: login_flow.py  search_product_flow.py
ai_tests/test_cases/: test_login.py  test_search_product.py
