[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-playwright-poc"
version = "0.1.0"
description = "AI Playwright Automation POC"

# --- New Section for Setuptools configuration ---
[tool.setuptools]
# Use the Setuptools function to automatically find all directories
# that contain an __init__.py file (like ai_core and ai_tests)
packages = ["ai_core", "ai_tests"]
# OR you can use: package-dir = {"" = "."} to search the whole folder
# but explicitly listing them is usually cleaner.